# fastapi-template

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/api/tasks/: router.py  schemas.py  service.py
app/client/: jsonplaceholder_client.py  schemas.py
app/config/: __init__.py  database.py  logger.py  settings.py
app/controllers/: task_controller.py
app/core/: app.py  config.py  error_handlers.py
app/dependencies/: database.py
app/entities/: __init__.py  task.py
app/migrations/: README  env.py
app/migrations/versions/: initial_migration.py
app/models/: task.py
app/routes/: __init__.py  task_routes.py
app/schemas/: __init__.py  jsonplaceholder.py
app/services/: task_service.py
app/utils/: __init__.py  error_handler.py  exceptions.py
